[gd_scene load_steps=3 format=3 uid="uid://cnx8r2j5k7h3m"]

[ext_resource type="Script" path="res://scripts/weapons/weapon_base.gd" id="1_weapon"]

[sub_resource type="BoxMesh" id="BoxMesh_weapon"]
size = Vector3(0.1, 0.15, 0.5)

[node name="WeaponBase" type="Node3D"]
script = ExtResource("1_weapon")

[node name="Model" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)
mesh = SubResource("BoxMesh_weapon")

[node name="MuzzlePoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.35)

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="MuzzleFlash" type="OmniLight3D" parent="MuzzlePoint"]
visible = false
light_color = Color(1, 0.8, 0.4, 1)
light_energy = 3.0
omni_range = 3.0

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
